analysis/spring-framework/step_1/logs/5298-5025c61.log
:buildSrc:compileJava UP-TO-DATE
:buildSrc:compileGroovy
:buildSrc:processResources
:buildSrc:classes
:buildSrc:jar
:buildSrc:assemble
:buildSrc:compileTestJava UP-TO-DATE
:buildSrc:compileTestGroovy UP-TO-DATE
:buildSrc:processTestResources UP-TO-DATE
:buildSrc:testClasses UP-TO-DATE
:buildSrc:test UP-TO-DATE
:buildSrc:check UP-TO-DATE
:buildSrc:build
:assemble
:build
:spring-core:cglibRepackJar
:spring-core:objenesisRepackJar
:spring-core:compileJava
:spring-core:processResources UP-TO-DATE
:spring-core:classes
:spring-core:jar
:spring-beans:compileJava
:spring-beans:processResources
:spring-beans:classes
:spring-beans-groovy:compileJava SKIPPED
:spring-beans-groovy:compileGroovywarning: [options] bootstrap class path not set in conjunction with -source 1.6
1 warning

:spring-beans-groovy:processResources UP-TO-DATE
:spring-beans-groovy:classes
:spring-beans:jar
:spring-aop:compileJava
:spring-aop:processResources
:spring-aop:classes
:spring-aop:jar
:spring-aop:sourcesJar
:spring-aop:assemble
:spring-aop:build
:spring-expression:compileJava
:spring-expression:processResources
:spring-expression:classes
:spring-expression:jar
:spring-instrument:compileJava
:spring-instrument:processResources UP-TO-DATE
:spring-instrument:classes
:spring-instrument:jar
:spring-context:compileJava
:spring-context:compileGroovy UP-TO-DATE
:spring-context:processResources
:spring-context:classes
:spring-context:jar
:spring-tx:compileJava/home/ubuntu/bugs/spring-framework/spring-tx/src/main/java/org/springframework/transaction/interceptor/TransactionAspectSupport.java:61: error: unmappable character for encoding ASCII
 * @author St??phane Nicoll
             ^
/home/ubuntu/bugs/spring-framework/spring-tx/src/main/java/org/springframework/transaction/interceptor/TransactionAspectSupport.java:61: error: unmappable character for encoding ASCII
 * @author St??phane Nicoll
              ^

:spring-tx:processResources
:spring-tx:classes
:spring-tx:jar
:spring-jdbc:compileJava
:spring-jdbc:processResources
:spring-jdbc:classes
:spring-jdbc:jar
:spring-context-support:compileJava
:spring-context-support:processResources
:spring-context-support:classes
:spring-context-support:jar
:spring-oxm:compileJava
:spring-oxm:processResources
:spring-oxm:classes
:spring-oxm:jar
:spring-web:compileJava/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/web/method/HandlerMethod.java:316: error: method does not override or implement a method from a supertype
		@Override
		^
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/web/method/annotation/ModelAttributeMethodProcessor.java:195: error: cannot find symbol
		return (returnType.hasMethodAnnotation(ModelAttribute.class) ||
		                  ^
  symbol:   method hasMethodAnnotation(Class<ModelAttribute>)
  location: variable returnType of type MethodParameter
2 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':spring-web:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 37.548 secs
